--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,19 +27,6 @@ jobs:
           mkdir build
           cmake -S . -B build
           build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} cmake --build build/ --config Release
-      - name: Run tests to generate coverage information
-        run: |
-          cd LAB7_8SONAR
-          ./build/LAB7
-          mv default.profraw test1.profraw
-      - name: Merge counters from different runs and convert the result into an llvm-cov-compatible form
-        run: |
-          cd LAB7_8SONAR
-          llvm-profdata merge -o merged.profdata *.profraw
-      - name: Collect the coverage
-        run: |
-          cd LAB7_8SONAR
-          llvm-cov show --instr-profile merged.profdata -object build/LAB7 > coverage.txt
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -47,5 +34,4 @@ jobs:
         run: |
           cd LAB7_8SONAR
           sonar-scanner \
-            --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}" \
-            --define sonar.cfamily.llvm-cov.reportPath=coverage.txt
+            --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}"
