--- a/LAB7_8SONAR/CMakeLists.txt
+++ b/LAB7_8SONAR/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.23)
-project(LAB7 С)
+project(LAB7)
 
-set(CMAKE_C_STANDARD 99)
+set(CMAKE_CXX_STANDARD 14)
 
 add_executable(LAB7 main.c IO.h IO.c Array.h Array.c SO.c SO.h Sort.c Sort.h)
